--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
   </div>
 
   <main>
-    <header style="background-image:url('imabiglogo.jpg')">
+    <header style="background-image:url('images/biglogo.jpg')">
       <div class="color-overlay d-flex justify-content-center align-items-center">
         <h1>Louie Marquez Creatives</h1>
       </div>
